<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="My Habits">
        <item
            android:id="@+id/add_habit"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_activity_add_habit" />
        <item
            android:id="@+id/add_event"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Habit History" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_gallery"
            android:title="All Habits" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Today's Habit" />
    </item>

    <item android:title="Following">
        <menu>
            <item
                android:id="@+id/find_friends"
                android:icon="@drawable/ic_menu_send"
                android:title="Find Friends" />
            <item
                android:id="@+id/followers"
                android:icon="@drawable/ic_menu_share"
                android:title="Followers" />
            <item
                android:id="@+id/following"
                android:icon="@drawable/ic_menu_send"
                android:title="Following" />
            <item
                android:id="@+id/requests"
                android:icon="@drawable/ic_menu_send"
                android:title="Requests" />
        </menu>
    </item>
    <item
        android:id="@+id/maps"
        android:icon="@drawable/ic_menu_gallery"
        android:title="Map" />

    <item android:title="Log Out">
    <menu>
        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_menu_send"
            android:title="Log out" />

    </menu>
    </item>

</menu>
