...
    <string name="habithint">Event filter</string>
    <string name="addEvent">Add Event</string>
    <string name="editEvent">Edit Event</string>
    <string name="locationadd">Add Location</string>
    <string name="comment">Comment</string>
    <string name="userImage">userImage</string>
    <string name="selectday">Select Date</string>
    <string name="comp_v1">Completed:</string>
    <string name="save">save</string>
    <string name="editlocation">Edit Location</string>
    <string name="Reason">Reason for Habit:</string>
    <string name="start">Start:</string>
    <string name="habitName">Habit title</string>
...
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="todayhabit">Today\'s Habits:</string>
    <string name="today">Today</string>
    <string name="all">All</string>
    <string name="history">History</string>
</resources>

