...
                        android:layout_height="38dp"
                        android:clickable="true"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/topSpacer">

                        <Button
                            android:id="@+id/buttonLeft"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:paddingStart="0dp"
                            android:paddingEnd="0dp"
                            android:text="@string/today"
...
                        android:layout_width="74dp"
                        android:layout_height="38dp"
                        app:layout_constraintLeft_toRightOf="@+id/buttonMiddleConstraint"
                        app:layout_constraintTop_toBottomOf="@+id/topSpacer">

                        <Button
                            android:id="@+id/buttonRight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:text="@string/all"
                            android:textAlignment="center" />
                    </android.support.constraint.ConstraintLayout>
...
